Corrected some spacing issues with the tablet and mobile size (integrations and why swipe sections)

--- a/queries.css
+++ b/queries.css
@@ -141,6 +141,10 @@
   }
 
   /* WHY SWIPE SECTION*/
+  .why-swipe-section {
+    padding: var(--spacing-md) 0 var(--spacing-xl) 0;
+  }
+
   .why-swipe-section .card-container {
     flex-wrap: wrap;
   }
@@ -223,7 +227,7 @@
   }
 
   main {
-    margin: var(--spacing-lg) 0;
+    margin: var(--spacing-lg) 0 0 0;
   }
 
   .hero .hero-phone-container {
@@ -248,7 +252,7 @@
   }
 
   .integrations-section::before {
-    height: 950px;
+    height: 900px;
   }
 
   .integrations-section .col-right {
@@ -257,7 +261,7 @@
 
   /* WHY SWIPE SECTION */
   .why-swipe-section {
-    padding: var(--spacing-lg) 0;
+    padding: var(--spacing-xl) 0 var(--spacing-lg) 0;
   }
 
   .why-swipe-section .card-container .card {
@@ -343,5 +347,17 @@
 
   .footer .icon-link img {
     width: 18px;
+  }
+}
+
+@media only screen and (max-width: 408px) {
+  /* INTEGRATIONS SECTION */
+  .integrations-section::before {
+    height: 950px;
+  }
+
+  /* WHY SWIPE SECTION */
+  .why-swipe-section {
+    padding: var(--spacing-lg) 0;
   }
 }
